--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         text-align: center;
         writing-mode: vertical-rl;
         font-size: 1.5rem;
+        position: fixed;
     }
     footer a{
         text-decoration: none;
