--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -92,7 +92,7 @@ th {
 <ul>
     <li class="nav-item"><a href="https://masalp.net">home</a></li>
     <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20Goals.html">goals</a></li>
-    <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20LTI.html">lti</a></li>
+    <li class="nav-item"><a href="https://docs.google.com/spreadsheets/d/1VrTp-Gj9uh4J1TV9b8ZzjK-UKgan69jmGgstSRTt14o/edit?usp=sharing">lti</a></li>
     <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20ToDo.html">todo</a></li>
 </ul>
 </div>
