Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -122,7 +122,9 @@ th {
             <td>Judo</td>
             <td>Doing judo classes at Budokan Dojo</td>
             <td></td>
-
+            <td><a href="#">#</a></td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
     
