--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>Goals - Masa</title>
 
@@ -114,7 +114,7 @@ th {
             <td>Japanese</td>
             <td>I'm taking lessons at the Seattle Japanese Language School</td>
             <td></td>
-            <td><a href="https://masalp.net/Learning%20Plan-%20Japanese.html">Japanese</a></td>
+            <td>Japanese</td>
             <td>/comms//pq//sr/</td>
             <td>med</td>
         </tr>
