Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -56,6 +56,12 @@ header {
 body {
     background-color: black;
 }
+section{
+    text-align: center;
+    color: white;
+    font-family: monospace;
+    font-size: 1.5rem;
+}   
 /**/
     td, th {
   border: 1px solid #2d2d2d;
