--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -10,7 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     </head>
-    <style>    footer{
+    <style>
+        footer{
         text-align: center;
         writing-mode: vertical-rl;
         font-size: 1.5rem;
