--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,6 +88,9 @@ th {
     background-color: rgb(46, 46, 46);
 }
 /**/
+    ::selection {
+        background-color: rgb(126, 126, 126);
+    }
     </style>
 <body>
         <header>
