--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -82,6 +82,9 @@ th {
     background-color: rgb(46, 46, 46);
 }
 /**/
+    ::selection {
+        background-color: rgb(79, 79, 79);
+    }
     </style>
     <body>
         <header>
