--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ section{
 }
 div { 
     display: inline-block;}
+        ::selection {
+        background-color: rgb(79, 79, 79);
+    }
 </style>
 <header>
     <h1>
