Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -118,6 +118,36 @@ th {
             <th>Priority</th>
             <th>Due</th>
         </tr>
+        <tr>
+            <td>Paperwork</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>LP Goals</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Letter to Senior Self</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>10 Stages of Geoncide</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Autobio</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
     </table>
     
 
