--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
+<!-- Elfsight Weather | Untitled Weather -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-46d1d790-60c8-4636-b10c-89373c9c8891" data-elfsight-app-lazy></div>
 <style>
     footer{
         text-align: center;
@@ -119,4 +122,5 @@ div {
 <a href="https://classroom.google.com/u/0/">CLASSROOM</a>-
 <a href="https://imblaze.my.site.com/s/">IMBLAZE</a>
 </footer>
+
 </html>
