--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ updateTime(); // Call immediately to avoid a 1-second delay
 
 </script>
 <style>
+  #clock {
+    color: white;
+    font-family: 'jost';
+  }
     footer{
         text-align: center;
         writing-mode: vertical-rl;
@@ -132,5 +136,6 @@ div {
 </footer>
 
 </html>
+
 
 
