--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
-  <div id="clock"></div>
+  
 
 <script>function updateTime() {
   const clockElement = document.getElementById('clock');
@@ -36,7 +36,8 @@ updateTime(); // Call immediately to avoid a 1-second delay
 <style>
   #clock {
     color: white;
-    font-family: 'jost';
+    font-family: 'asimovian';
+    margin-left: 10%;
   }
     footer{
         text-align: center;
@@ -112,6 +113,7 @@ div {
         masa berry
     </h1>
 </header>
+  <div id="clock"></div>
 <div class="main-nav">
 <ul>
     <li class="nav-item"><a href="https://masalp.net">home</a></li>
@@ -136,6 +138,7 @@ div {
 </footer>
 
 </html>
+
 
 
 
