--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ div {
     <h1>
         masa berry
     </h1>  
-  <div id="clock"></div>
+ 
 </header>
 
 <div class="main-nav">
@@ -132,13 +132,14 @@ div {
   <div id="seven" class="tilt-r2x">nothing"</div>
   <div id="eight" class="tilt-l2x">- fractal161</div>
 </section>
-<footer>
+<footer> <div id="clock"></div>
 <a href="https://mail.google.com/mail/u/0/#inbox">MAIL</a>-
 <a href="https://classroom.google.com/u/0/">CLASSROOM</a>-
 <a href="https://imblaze.my.site.com/s/">IMBLAZE</a>
 </footer>
 
 </html>
+
 
 
 
