--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@ div {
   <div id="seven" class="tilt-r2x">nothing"</div>
   <div id="eight" class="tilt-l2x">- fractal161</div>
 </section>
-<footer> <div id="clock"></div>
+<footer> 
 <a href="https://mail.google.com/mail/u/0/#inbox">MAIL</a>-
 <a href="https://classroom.google.com/u/0/">CLASSROOM</a>-
 <a href="https://imblaze.my.site.com/s/">IMBLAZE</a>
 </footer>
-
+<div id="clock"></div>
 </html>
 
 .sSSSsSS SSsSSSSS .sSSSSs.    .sSSSSs.    .sSSSSs.    SSSSS       .sSSSSs.          .sSSSs.  SSSSS .sSSSSs.       .sSSSSSSSSs.   
@@ -140,6 +140,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
