--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ updateTime(); // Call immediately to avoid a 1-second delay
   #clock {
     color: white;
     font-family: 'asimovian';
-    margin-left: 10%;
+    margin-left: 10px;
   }
     footer{
         text-align: center;
@@ -140,6 +140,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
