--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ div {
     <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20ToDo.html">todo</a></li>
 </ul>
 </div>
-<section>
+<section><div id="clock"></div>
   <div id="one" class="tilt-l2x">"lock in</div>
   <div id="three" class="tilt-r2x">eyes</div>
   <div id="four" class="tilt-l">wide</div>
@@ -128,7 +128,18 @@ div {
 <a href="https://classroom.google.com/u/0/">CLASSROOM</a>-
 <a href="https://imblaze.my.site.com/s/">IMBLAZE</a>
 </footer>
-<div id="clock"></div>
+
+
+
+
+
+<script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+<div class="commonninja_component pid-48839d10-20ac-4cbd-b93c-bceda9cbafa0"></div>
+
+
+
+
+  
 </html>
 
 .sSSSsSS SSsSSSSS .sSSSSs.    .sSSSSs.    .sSSSSs.    SSSSS       .sSSSSs.          .sSSSs.  SSSSS .sSSSSs.       .sSSSSSSSSs.   
@@ -140,6 +151,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
