--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ updateTime(); // Call immediately to avoid a 1-second delay
 <style>
   #clock {
     color: white;
-    font-family: 'asimovian';
+    font-family: 'courier';
     margin-right: 10px;
   }
     footer{
@@ -113,8 +113,8 @@ div {
     <li class="nav-item"><a href="https://docs.google.com/spreadsheets/d/1VrTp-Gj9uh4J1TV9b8ZzjK-UKgan69jmGgstSRTt14o/edit?usp=sharing">lti</a></li>
     <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20ToDo.html">todo</a></li>
 </ul>
-</div>
-<section><div id="clock"></div>
+</div><div id="clock"></div>
+<section>
   <div id="one" class="tilt-l2x">"lock in</div>
   <div id="three" class="tilt-r2x">eyes</div>
   <div id="four" class="tilt-l">wide</div>
@@ -140,6 +140,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
