--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ updateTime(); // Call immediately to avoid a 1-second delay
     color: white;
     font-family: 'courier';
     margin-right: 10px;
+    font-size: 2.5rem;
   }
     footer{
         text-align: center;
@@ -140,6 +141,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
