--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ div {
     <li class="nav-item"><a href="https://docs.google.com/spreadsheets/d/1VrTp-Gj9uh4J1TV9b8ZzjK-UKgan69jmGgstSRTt14o/edit?usp=sharing">lti</a></li>
     <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20ToDo.html">todo</a></li>
 </ul>
-</div><div id="clock"></div>
+</div><!--<div id="clock"></div>-->
 <section>
   <div id="one" class="tilt-l2x">"lock in</div>
   <div id="three" class="tilt-r2x">eyes</div>
@@ -141,6 +141,7 @@ S:::S       SSSSS S:::S SSSSS .sSSS SSSSS S:::S SSSSS S:::S       S:::SsSSSSS   
 S;;;S       SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S SSSSS S;;;S       S;;;S       .sSs. S;;;S    SSSSS S;;;S             S;;;S       
 S%%%S       SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S SSSSS S%%%S       S%%%S S%%%S    SSSSS S%%%S SSSSS       S%%%S       
 SSSSS       SSSSS SSSSS SSSSS SSSSSsSSSSS SSSSS SSSSS SSSSSsSS;:' SSSSS       `:;:' SSSSS    SSSSS SSSSSsSS;:'       SSSSS       
+
 
 
 
